// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders ContactInfo 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 {
  font-size: 16px;
}

.c2 {
  font-size: 12px;
}

<div>
  <span
    className="c0"
    size="l"
  >
    Контактная информация
  </span>
  <div
    className="c1"
  >
    <span
      className="c2"
      size="s"
    >
      Имя: 
      name
    </span>
    <span
      className="c2"
      size="s"
    >
      Тел.: 
      phoneNumber
    </span>
  </div>
</div>
`;

exports[`Renders correct contact styles 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div
  className="c0"
>
  text
</div>
`;
